fix: modal icon overflow issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -131,3 +131,7 @@ button {
 section#content {
   position: relative;
 }
+
+.swal2-icon {
+  overflow: hidden;
+}
